--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -13,6 +13,7 @@
 				</li>
 				<li><a href="{% url 'gallery' current_page_user.id %}">Gallery</a></li>
 			</ul>
+            {% if user == current_page_user %}
             <div class="row-fluid sortable ui-sortable">
 				<div class="box span12">
 					<div class="box-header" data-original-title="">
@@ -35,7 +36,7 @@
 							  </div>
 							</div>
 							<div class="form-actions">
-							  <button type="submit" class="btn btn-primary">Save changes</button>
+							  <button type="submit" class="btn btn-primary">Upload a photo</button>
 							  <button type="reset" class="btn">Cancel</button>
 							</div>
 						  </fieldset>
@@ -43,6 +44,7 @@
 					</div>
 				</div><!--/span-->
             </div>
+            {% endif %}
 			<div class="row-fluid sortable">
 				<div class="box span12">
 					<div class="box-header" data-original-title>
