--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -17,15 +17,9 @@
 				</li>
 			</ul>
 			
-			<div class="row-fluid sortable">
+			<div class="row-fluid">
 				<div class="box span12">
 					<div class="box-header" data-original-title>
-						<h2><i class="halflings-icon white edit"></i><span class="break"></span>Form Elements</h2>
-						<div class="box-icon">
-							<a href="#" class="btn-setting"><i class="halflings-icon white wrench"></i></a>
-							<a href="#" class="btn-minimize"><i class="halflings-icon white chevron-up"></i></a>
-							<a href="#" class="btn-close"><i class="halflings-icon white remove"></i></a>
-						</div>
 					</div>
 					<div class="box-content">
 						<form class="form-horizontal" method="post" enctype="multipart/form-data" action="{% url 'update_profile' user.id %}">
