--- a/templates/friends_list.html
+++ b/templates/friends_list.html
@@ -14,46 +14,42 @@
 				<li><a href="{% url 'friends' current_page_user.id %}">Friends</a></li>
 			</ul>
 
-			<div class="row-fluid sortable">		
+			<div class="row-fluid">
 				<div class="box span12">
 					<div class="box-header" data-original-title>
-						<h2><i class="halflings-icon white user"></i><span class="break"></span>Members</h2>
-						<div class="box-icon">
-							<a href="#" class="btn-setting"><i class="halflings-icon white wrench"></i></a>
-							<a href="#" class="btn-minimize"><i class="halflings-icon white chevron-up"></i></a>
-							<a href="#" class="btn-close"><i class="halflings-icon white remove"></i></a>
-						</div>
+						<h2><i class="halflings-icon white user"></i><span class="break"></span>Friends requests</h2>
 					</div>
                     {% if user == current_page_user %}
                     <div class="box-content">
-						<table class="table table-striped table-bordered bootstrap-datatable datatable">
+						<table class="table table-striped table-bordered">
 						  <thead>
 							  <tr>
 								  <th>Username</th>
-								  <th>Date registered</th>
-								  <th>Role</th>
-								  <th>Status</th>
+								  <th>Name</th>
 								  <th>Actions</th>
 							  </tr>
 						  </thead>
 						  <tbody>
                             {% for friend in friends_requests_users %}
 							<tr>
-                                <td><a href="{% url 'index' friend.id %}">{{ friend.first_name }} {{ friend.last_name }}</a></td>
-								<td class="center">1</td>
-								<td class="center"></td>
+                                <td>
+                                    <img class="img-circle" style="max-width: 36px; max-height: 42px;" alt="{{ friend.username }}" src="/media/{{ friend.avatar }}">
+                                </td>
+                                <td>
+                                    <a href="{% url 'index' friend.id %}">
+                                        {{ friend.first_name }} {{ friend.last_name }}
+                                    </a>
+                                </td>
 								<td class="center">
-									<span class="label label-success"></span>
-								</td>
-								<td class="center">
-									<a class="btn btn-success" href="{% url 'accept_friend' friend.id %}">
-                                        Add
+                                    <a class="btn btn-success" href="{% url 'start_chat' user.id friend.id %}">
+										<i class="halflings-icon white envelope"></i>
 									</a>
-									<a class="btn btn-info" href="#">
-										<i class="halflings-icon white edit"></i>
-									</a>
+									<a class="btn btn-primary" href="{% url 'accept_friend' friend.id %}">
+									    <i class="halflings-icon white ok-circle"></i>
+                                    </a>
+
 									<a class="btn btn-danger" href="#">
-										<i class="halflings-icon white trash"></i>
+										<i class="halflings-icon white ban-circle"></i>
 									</a>
 								</td>
 							</tr>
@@ -62,34 +58,34 @@
 					  </table>
 					</div>
                     {% endif %}
+                    <div class="box-header" data-original-title>
+						<h2><i class="halflings-icon white user"></i><span class="break"></span>Friends list</h2>
+					</div>
                     <div class="box-content">
-						<table class="table table-striped table-bordered bootstrap-datatable datatable">
+						<table class="table table-striped table-bordered">
 						  <thead>
 							  <tr>
-								  <th>Username</th>
-								  <th>Date registered</th>
-								  <th>Role</th>
-								  <th>Status</th>
+								  <th>Avatar</th>
+								  <th>Name</th>
 								  <th>Actions</th>
 							  </tr>
 						  </thead>   
 						  <tbody>
                             {% for friend in friends %}
 							<tr>
-                                <td><a href="{% url 'index' friend.id %}">{{ friend.first_name }} {{ friend.last_name }}</a></td>
-								<td class="center">1</td>
-								<td class="center"></td>
+                                <td>
+                                    <img class="img-circle" style="max-width: 36px; max-height: 42px;" alt="{{ friend.username }}" src="/media/{{ friend.avatar }}">
+                                </td>
+                                <td>
+                                    <a href="{% url 'index' friend.id %}">
+                                        {{ friend.first_name }} {{ friend.last_name }}
+                                    </a>
+                                </td>
 								<td class="center">
-									<span class="label label-success"></span>
-								</td>
-								<td class="center">
-									<a class="btn btn-success" href="#">
-										<i class="halflings-icon white zoom-in"></i>  
+									<a class="btn btn-success" href="{% url 'start_chat' user.id friend.id %}">
+										<i class="halflings-icon white envelope"></i>
 									</a>
-									<a class="btn btn-info" href="#">
-										<i class="halflings-icon white edit"></i>  
-									</a>
-									<a class="btn btn-danger" href="#">
+									<a class="btn btn-danger" href="{% url 'remove_friend' friend.id %}">
 										<i class="halflings-icon white trash"></i> 
 									</a>
 								</td>
