ws connections fix

--- a/templates/messages_listener.html
+++ b/templates/messages_listener.html
@@ -1,5 +1,7 @@
 <script>
     var prot = window.protocol == 'https' ? 'wss' : 'ws';
+    console.log(window.protocol);
+    console.log(prot);
     var chatSocket_group = new WebSocket(
         prot + '://' + window.location.host + '/ws/chat/listener/');
     chatSocket_group.onmessage = function(e) {
