ws connections fix

--- a/templates/messages_listener.html
+++ b/templates/messages_listener.html
@@ -1,6 +1,6 @@
 <script>
-    var prot = window.protocol == 'https' ? 'wss' : 'ws';
-    console.log(window.protocol);
+    var prot = window.location.protocol == 'https' ? 'wss' : 'ws';
+    console.log(window.location.protocol);
     console.log(prot);
     var chatSocket_group = new WebSocket(
         prot + '://' + window.location.host + '/ws/chat/listener/');
