--- a/templates/messages_listener.html
+++ b/templates/messages_listener.html
@@ -1,9 +1,9 @@
 <script>
-    var prot = window.location.protocol == 'https' ? 'wss' : 'ws';
+    var prot = window.location.protocol == 'https:' ? 'wss:' : 'ws:';
     console.log(window.location.protocol);
     console.log(prot);
     var chatSocket_group = new WebSocket(
-        prot + '://' + window.location.host + '/ws/chat/listener/');
+        prot + '//' + window.location.host + '/ws/chat/listener/');
     chatSocket_group.onmessage = function(e) {
         console.log('Got new message!');
         var mess_elem = document.getElementById('new_message');
