ws connections fix

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -70,5 +70,5 @@
 			<!-- end: Content -->
 		</div><!--/#content.span10-->
 		</div><!--/fluid-row-->
-		
+    {% include 'messages_listener.html' %}
 {% endblock %}
