--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -85,5 +85,6 @@
 			<!-- end: Content -->
 		</div><!--/#content.span10-->
 		</div><!--/fluid-row-->
+    {% include 'messages_listener.html' %}
 
 {% endblock %}
