--- a/templates/friends_list.html
+++ b/templates/friends_list.html
@@ -103,4 +103,5 @@
 			<!-- end: Content -->
 		</div><!--/#content.span10-->
 		</div><!--/fluid-row-->
+        {% include 'messages_listener.html' %}
 {% endblock %}
