--- a/templates/chat/messages.html
+++ b/templates/chat/messages.html
@@ -76,8 +76,9 @@
 	
 	<div class="clearfix"></div>
 <script>
+    var prot = window.location.protocol == 'https:' ? 'wss:' : 'ws:';
     var chatSocket_group = new WebSocket(
-        'ws://' + window.location.host + '/ws/chat/listener/');
+        prot + '//' + window.location.host + '/ws/chat/listener/');
     chatSocket_group.onmessage = function(e) {
         console.log('Got new message!');
         var mess_elem = document.getElementById('new_message');
