--- a/templates/friends_list.html
+++ b/templates/friends_list.html
@@ -48,7 +48,7 @@
 									    <i class="halflings-icon white ok-circle"></i>
                                     </a>
 
-									<a class="btn btn-danger" href="#">
+									<a class="btn btn-danger" href="{% url 'decline_friend' friend.id %}">
 										<i class="halflings-icon white ban-circle"></i>
 									</a>
 								</td>
