add link to my linkedin :)

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,9 @@
 	<footer>
 
 		<p>
-			<span style="text-align:left;float:left">&copy; 2013 <a href="http://themifycloud.com/downloads/janux-free-responsive-admin-dashboard-template/" alt="Bootstrap_Metro_Dashboard">JANUX Responsive Dashboard</a></span>
+			<span style="text-align:left;float:left">Design: &copy; 2013 <a href="http://themifycloud.com/downloads/janux-free-responsive-admin-dashboard-template/" alt="Bootstrap_Metro_Dashboard">JANUX Responsive Dashboard</a>
+                Functionality: <a href="https://www.linkedin.com/in/andrei-ivash-pd/">Andrei Ivashkevich</a>
+            </span>
 
 		</p>
 
